# LangWatch

./: .gitignore  README.md  config.example.yaml  pyproject.toml
langwatch/: __main__.py  caption_processor.py  cli.py  config.py  downloader.py  gloss_generator.py  subtitle_generator.py  translator.py  utils.py  vocabulary.py
